<resources>
    <string name="app_name">FusionTestApp</string>
    <string name="api_label">API :</string>
    <string name="description_label">Description :</string>
    <string name="auth_label">Auth :</string>
    <string name="https_label">HTTPS :</string>
    <string name="cors_label">Cors :</string>
    <string name="link_label">Link :</string>
    <string name="category_label">Category :</string>
</resources>